test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/caller.widl
// Extracted from http://dev.w3.org/2006/webapi/WebIDL/ on 2011-05-06
// legacycallers are removed by https://github.com/heycam/webidl/pull/412

interface NumberQuadrupler {
  // This operation simply returns four times the given number x.
  legacycaller float compute(float x);
};